Added ESLint (Airbnb)

--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "database"
   ],
   "author": "David Gaspar",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-plugin-import": "^2.18.2"
+  }
 }
