--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "web-service",
   "version": "1.0.0",
   "description": "Web Service RESTful com Node.js e Restify",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "nodemon ./"
+    "dev": "nodemon ./src"
   },
   "keywords": [
     "RESTful",
