--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-import": "^2.18.2"
   },
   "dependencies": {
-    "restify": "^8.3.3"
+    "restify": "^8.3.3",
+    "restify-cors-middleware": "^1.1.1"
   }
 }
